--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <section style="align-items: center; height: 2rem; width: 2rem;">
-        <a href="./semana-5/CRUD de carros/index.html">grud de carros teste</a>
+    <section>
+        <a href="./semana-5/CRUD-de-carros/index.html">grud de carros teste</a>
     </section>
 </body>
 
