--- a/semana-6/A-Padaria-Crud/index.html
+++ b/semana-6/A-Padaria-Crud/index.html
@@ -132,6 +132,20 @@
 
 
 
+        // 6
+        function receberPedidos(){
+
+        }
+
+
+
+        // 7 
+        function relatórioDiarios(pedidos){
+            const data = prompt(``)
+
+        }
+
+
         function menuPadoca() {
             while (true) {
                 const opcoes = +prompt(`Bem-vindo ao sistema de CRUD de veículos:
@@ -144,7 +158,7 @@
                 3 - EditarProdutos
                 4 - Remover Produtos
                 5 - somar o valor do estoque(Preço de Venda)
-                6 - Sair do Menu`);
+                8 - Sair do Menu`);
 
 
                 switch (opcoes) {
@@ -163,7 +177,7 @@
                     case 5:
 
                         break;
-                    case 6:
+                    case 8:
                         alert('Saindo do Sistema')
                         return
                     default:
