--- a/semana-6/atividade-api/index.html
+++ b/semana-6/atividade-api/index.html
@@ -122,10 +122,7 @@
             }
         }
 
-        episodeDetails(prompt("Digite o ID do episódio!"))
-
-
-
+        episodeDetails(prompt("Digite o ID do episódio!")) //*episode*
 
 
 
